@@ -12,6 +12,7 @@ Version 0.3.5 - ??
 - [bugfix] WFYAHOO_widget_ColorPicker now works properly when used as a prototype for WFDynamic.
 - [new] WFYAHOO_widget_ColorPicker will bootstrap its own text field if none supplied.
 - [new] WFYAHOO_widget_ColorPicker.value is now bindable.
+- [new] Added WFArray.valuesForKeyPaths
 
 Version 0.3.4 - 1/8/2010
 - [new] Now PEAR-installable! pear channel-discover apinstein.pearfarm.org; pear install apinstein/phocoa
